--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Frontend Mentor | Product preview card component</title>
+    <title>Frontend Mentor | Base Apparel</title>
     <link rel="icon" type="image/png" href="./assets/images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./main.css" />
